# super-duper-octo-succotash

./: CNAME  Pflanzen.md  README.md  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: python-app.yml
_modules/: api.html  index.html  modules.html  plantai.html  plantai.tests.html  plantapi.html
_modules/ai_training/: helperscripts.html  index.html  modules.html  training.html
_modules/api/: main.html  test_main.html
_modules/backend/: api.html  index.html  modules.html  plantai.html  plantai.tests.html  plantapi.html
_modules/helperscripts/: cleanDataset.html
_modules/plantai/: plant_ai.html
_modules/plantapi/: plant_api.html  test_plant_api.html
_modules/training/: models.html  stats.html  utils.html
_sources/: index.rst.txt
_sources/_modules/: modules.rst.txt  plantapi.rst.txt
ai_training/: Dockerfile  README.md  docker-compose.yml
ai_training/models/: config_2025-03-23_11-43-07.json  final_model_2025-03-23_11-43-06_69P_888.pth
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  requirements.txt
backend/src/: main.py  plant_api.py  test_main.py  test_plant_api.py
backend/tests/: main_test.py
dataset/plantnet_300K/: plantnet300K_species_names.json
docs/source/: conf.py  index.rst
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
models/: config_2025-03-23_11-43-07.json  finetuned_model_2025-03-26_20-30-43.pth
(+74 files in other folders)
