[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PlantAI"
version = "0.1.0"
description = "Ein Pflanzenklassifikationsprojekt mit KI und API"
authors = [
    { name = "Justus Siegert", email = "mail@example.com"},
    { name = "Lukas Maier", email = "mail@example.com"},
    { name = "Timon Kleinknecht", email = "mail@example.com"}
]

readme = "README.md"
requires-python = ">=3.9"
keywords = ["plant", "classification", "fastapi", "torch", "machine learning"]


dependencies = [
    "fastapi==0.115.11",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "pillow==11.1.0",
    "uvicorn==0.34.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
    "flake8==7.1.2",
    "pytest==8.3.5",
    "pytest-cov==6.0.0"
]
docs = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2"
]



[tool.setuptools.packages.find]
where = ["backend/src","ai_training/src","."]
exclude = ["tests"]

